<resources>
    <string name="app_name">Transvision</string>

    <!-- Text hint untuk field email di login page -->
    <string name="hint_email">Email</string>

    <!-- Text hint untuk field password di login page -->
    <string name="hint_pass">Password</string>

    <!-- Text untuk login button di login page -->
    <string name="login">Login</string>

    <!-- Label untuk menu opsi editor save peminjaman -->
    <string name="action_save">Save</string>

    <string name="empty_title_text">Anda sedang offline...</string>

    <string name="empty_subtitle_text">Koneksikan device anda dengan internet</string>

    <string name="tujuan">Tujuan</string>
    <string name="keperluan">Keperluan</string>
    <string name="jumlah_penumpang">Jum Penumpang</string>
    <string name="tgl_pemakaian">Tgl Pemakaian</string>
    <string name="detail_permohonan">Detail Permohonan</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="foto_kilometer">Foto Kilometer</string>
    <string name="make_peminjaman">Buat permohonan peminjaman sekarang</string>
    <string name="never_make_peminjaman">Anda belum pernah melakukan peminjaman</string>
    <string name="detail_peminjaman">Detail Peminjaman</string>

    <string name="pref_file">preference_file</string>
    <string name="pref_login_status">preference_login_status</string>
    <string name="pref_email">preference_email</string>

</resources>
